change scroll bar color

--- a/src/global.scss
+++ b/src/global.scss
@@ -73,13 +73,7 @@ body {
     --header-border: hsla(0, 0%, 100%, 0.2);
     .gatsby-highlight {
       &::-webkit-scrollbar-thumb {
-        background: linear-gradient(-180deg, #bcc5ce 0%, #929ead 98%),
-          radial-gradient(
-            at top left,
-            rgba(255, 255, 255, 0.3) 0%,
-            rgba(0, 0, 0, 0.3) 100%
-          );
-        background-blend-mode: screen;
+        background-image: linear-gradient(to right, #243949 0%, #517fa4 100%);
       }
     }
   }
